Añadidos géneros en Songs(One to Many) y Bands(Many to Many)
This closes #13, closes #14

--- a/src/main/webapp/app/entities/song/song-detail.component.html
+++ b/src/main/webapp/app/entities/song/song-detail.component.html
@@ -12,6 +12,12 @@
         <dd>
             <span>{{song.description}}</span>
         </dd>
+        <dt><span jhiTranslate="rockbible3App.song.genre">Genre</span></dt>
+        <dd>
+            <div *ngIf="song.genre">
+                <a [routerLink]="['/genre', song.genre?.id]">{{song.genre?.name}}</a>
+            </div>
+        </dd>
         <dt><span jhiTranslate="rockbible3App.song.album">Album</span></dt>
         <dd>
             <div *ngIf="song.album">
