--- a/src/main/webapp/app/entities/song/song-dialog.component.html
+++ b/src/main/webapp/app/entities/song/song-dialog.component.html
@@ -24,6 +24,13 @@
         </div>
 
         <div class="form-group">
+            <label class="form-control-label" jhiTranslate="rockbible3App.song.genre" for="field_genre">Genre</label>
+            <select class="form-control" id="field_genre" name="genre" [(ngModel)]="song.genre" >
+                <option [ngValue]="null"></option>
+                <option [ngValue]="genreOption.id === song.genre?.id ? song.genre : genreOption" *ngFor="let genreOption of genres; trackBy: trackGenreById">{{genreOption.name}}</option>
+            </select>
+        </div>
+        <div class="form-group">
             <label class="form-control-label" jhiTranslate="rockbible3App.song.album" for="field_album">Album</label>
             <select class="form-control" id="field_album" name="album" [(ngModel)]="song.album" >
                 <option [ngValue]="null"></option>
