--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,41 +1,39 @@
+<div class="fondo container-fluid">
 <div class="row">
-    <div class="col-md-3">
-        <span class="hipster img-fluid rounded"></span>
-    </div>
-    <div class="col-md-9">
-        <h1 class="display-4" jhiTranslate="home.title">Welcome, Java Hipster!</h1>
-        <p class="lead" jhiTranslate="home.subtitle">This is your homepage</p>
-
-        <div [ngSwitch]="isAuthenticated()">
-            <div class="alert alert-success" *ngSwitchCase="true">
-                <span *ngIf="account" jhiTranslate="home.logged.message"
-                    translateValues="{username: '{{account.login}}'}"> You are logged in as user "{{account.login}}". </span>
-            </div>
-
-            <div class="alert alert-warning" *ngSwitchCase="false">
-                <span jhiTranslate="global.messages.info.authenticated.prefix">If you want to </span>
-                <a class="alert-link" (click)="login()" jhiTranslate="global.messages.info.authenticated.link">sign in</a><span jhiTranslate="global.messages.info.authenticated.suffix">, you can try the default accounts:<br/>- Administrator (login="admin" and password="admin") <br/>- User (login="user" and password="user").</span>
-            </div>
-            <div class="alert alert-warning" *ngSwitchCase="false">
-                <span jhiTranslate="global.messages.info.register.noaccount">You don't have an account yet?</span>
-                <a class="alert-link" routerLink="register" jhiTranslate="global.messages.info.register.link">Register a new account</a>
+    <div class="col-sm-12" style="text-align: center"><h1>Top Canciones</h1></div>
+    <div *ngFor="let data of DataTopTracks" class="infoDiv col-lg-2 col-md-3 col-sm-6">
+        <div class="cover"  [style.background-image]="sanitizeImage(data.albumId)">
+            <div class="overlayInfo">
+                <div>
+                    <img class="image" src="../../content/images/heart-1.png" height="20px" width="20px"/>
+                    <audio controls class="audio">
+                        <source src="{{data.previewURL}}" type="audio/mpeg">
+                    </audio>
+                </div>
             </div>
         </div>
-
-        <p jhiTranslate="home.question">
-            If you have any question on JHipster:
-        </p>
-
-        <ul>
-            <li><a href="http://www.jhipster.tech/" target="_blank" rel="noopener" jhiTranslate="home.link.homepage">JHipster homepage</a></li>
-            <li><a href="http://stackoverflow.com/tags/jhipster/info" target="_blank" rel="noopener" jhiTranslate="home.link.stackoverflow">JHipster on Stack Overflow</a></li>
-            <li><a href="https://github.com/jhipster/generator-jhipster/issues?state=open" target="_blank" rel="noopener" jhiTranslate="home.link.bugtracker">JHipster bug tracker</a></li>
-            <li><a href="https://gitter.im/jhipster/generator-jhipster" target="_blank" rel="noopener" jhiTranslate="home.link.chat">JHipster public chat room</a></li>
-            <li><a href="https://twitter.com/java_hipster" target="_blank" rel="noopener" jhiTranslate="home.link.follow">follow @java_hipster on Twitter</a></li>
-        </ul>
-
-        <p>
-            <span jhiTranslate="home.like">If you like JHipster, don't forget to give us a star on</span> <a href="https://github.com/jhipster/generator-jhipster" target="_blank" rel="noopener" jhiTranslate="home.github">GitHub</a>!
-        </p>
+        <p class="tituloSong" style="text-align: center; color: white">{{data.name}}</p>
+    </div>
+</div>
+    <br>
+    <div class="row">
+        <div class="col-sm-12">
+            <input [(ngModel)]="search" type="text" required>
+            <button class="btn btn-primary" (click)="searchSong()">Buscar</button>
+        </div>
+    </div>
+    <div class="row">
+        <div *ngFor="let data of DataSearch" class="infoDiv col-lg-2 col-md-3 col-sm-6">
+            <div class="cover" [style.background-image]="sanitizeImage(data.albumId)">
+                <div class="overlayInfo">
+                    <div>
+                        <audio controls class="audio">
+                            <source src="{{data.previewURL}}" type="audio/mpeg">
+                        </audio>
+                    </div>
+                    <div class="tituloSong">{{data.name}}</div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
