--- a/src/main/webapp/app/entities/valoracion-band/valoracion-band-detail.component.html
+++ b/src/main/webapp/app/entities/valoracion-band/valoracion-band-detail.component.html
@@ -22,6 +22,10 @@
                 <a [routerLink]="['/band', valoracionBand.band?.id]">{{valoracionBand.band?.name}}</a>
             </div>
         </dd>
+        <dt><span jhiTranslate="rockbible3App.valoracionBand.user">User</span></dt>
+        <dd>
+            {{valoracionBand.user?.login}}
+        </dd>
     </dl>
 
     <button type="submit"
