--- a/src/main/webapp/app/entities/valoracion-band/valoracion-band.component.html
+++ b/src/main/webapp/app/entities/valoracion-band/valoracion-band.component.html
@@ -21,6 +21,7 @@
             <th><span jhiTranslate="rockbible3App.valoracionBand.like">Like</span></th>
             <th><span jhiTranslate="rockbible3App.valoracionBand.timestamp">Timestamp</span></th>
             <th><span jhiTranslate="rockbible3App.valoracionBand.band">Band</span></th>
+            <th><span jhiTranslate="rockbible3App.valoracionBand.user">User</span></th>
             <th></th>
             </tr>
             </thead>
@@ -34,6 +35,9 @@
                     <div *ngIf="valoracionBand.band">
                         <a [routerLink]="['../band', valoracionBand.band?.id ]" >{{valoracionBand.band?.name}}</a>
                     </div>
+                </td>
+                <td>
+                    {{valoracionBand.user?.login}}
                 </td>
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
