--- a/src/main/webapp/app/entities/collections/collections-detail.component.html
+++ b/src/main/webapp/app/entities/collections/collections-detail.component.html
@@ -4,17 +4,9 @@
     <hr>
     <jhi-alert-error></jhi-alert-error>
     <dl class="row-md jh-entity-details">
-        <dt><span jhiTranslate="rockbible3App.collections.trackId">Track Id</span></dt>
+        <dt><span jhiTranslate="rockbible3App.collections.napsterId">Napster Id</span></dt>
         <dd>
-            <span>{{collections.trackId}}</span>
-        </dd>
-        <dt><span jhiTranslate="rockbible3App.collections.concertId">Concert Id</span></dt>
-        <dd>
-            <span>{{collections.concertId}}</span>
-        </dd>
-        <dt><span jhiTranslate="rockbible3App.collections.artistId">Artist Id</span></dt>
-        <dd>
-            <span>{{collections.artistId}}</span>
+            <span>{{collections.napsterId}}</span>
         </dd>
         <dt><span jhiTranslate="rockbible3App.collections.type">Type</span></dt>
         <dd>
