--- a/src/main/webapp/app/entities/collections/collections-dialog.component.html
+++ b/src/main/webapp/app/entities/collections/collections-dialog.component.html
@@ -13,19 +13,9 @@
                    [(ngModel)]="collections.id" readonly />
         </div>
         <div class="form-group">
-            <label class="form-control-label" jhiTranslate="rockbible3App.collections.trackId" for="field_trackId">Track Id</label>
-            <input type="text" class="form-control" name="trackId" id="field_trackId"
-                [(ngModel)]="collections.trackId"  />
-        </div>
-        <div class="form-group">
-            <label class="form-control-label" jhiTranslate="rockbible3App.collections.concertId" for="field_concertId">Concert Id</label>
-            <input type="text" class="form-control" name="concertId" id="field_concertId"
-                [(ngModel)]="collections.concertId"  />
-        </div>
-        <div class="form-group">
-            <label class="form-control-label" jhiTranslate="rockbible3App.collections.artistId" for="field_artistId">Artist Id</label>
-            <input type="text" class="form-control" name="artistId" id="field_artistId"
-                [(ngModel)]="collections.artistId"  />
+            <label class="form-control-label" jhiTranslate="rockbible3App.collections.napsterId" for="field_napsterId">Napster Id</label>
+            <input type="text" class="form-control" name="napsterId" id="field_napsterId"
+                [(ngModel)]="collections.napsterId"  />
         </div>
         <div class="form-group">
             <label class="form-control-label" jhiTranslate="rockbible3App.collections.type" for="field_type">Type</label>
