--- a/src/main/webapp/app/pages/pagehome/phome.component.html
+++ b/src/main/webapp/app/pages/pagehome/phome.component.html
@@ -1,30 +1,21 @@
-<div>
-    <h2><span data-translate="rockbible3App.pagehome.phome.title">Tu música a un solo Click</span></h2>
+<div class="fondo">
+    <br>
+    <h2 style="text-align: center"><span data-translate="rockbible3App.pagehome.phome.title">Tu música a un solo Click</span></h2>
     <hr>
     <jhi-alert-error></jhi-alert-error>
-<!--
-    <div class="table-responsive" *ngIf="phomes">
-        <table class="table table-striped">
-            <thead>
-                <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let phome of phomes ;trackBy: trackId">
 
-                </tr>
-            </tbody>
-        </table>
-    </div>
--->
     <p> Bienvenido {{account.login}} </p>
-    <div class="fondo container-fluid">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12" style="text-align: center"><h1>Top Canciones</h1></div>
-            <div *ngFor="let data of DataTopTracks" class="infoDiv col-lg-2 col-md-3 col-sm-6">
-                <div class="cover"  [style.background-image]="sanitizeImage(data.albumId)">
+        </div>
+        <div class="row">
+            <div *ngFor="let data of DataTopTracks" class="infoDiv col-lg-2 col-md-3 col-sm-6 image-top">
+                <br>
+                <div class="cover"  [style.background-image]="sanitizeImage(data.albumId)" >
                     <div class="overlayInfo">
                         <div>
+                            <img class="image" src="../../../content/images/heart-1.png" height="20px" width="20px"/>
                             <audio controls class="audio">
                                 <source src="{{data.previewURL}}" type="audio/mpeg">
                             </audio>
@@ -32,18 +23,23 @@
                         <div class="tituloSong">{{data.name}}</div>
                     </div>
                 </div>
+                <br>
             </div>
         </div>
+        <br>
         <div class="row">
+            <br>
             <div class="col-sm-12">
                 <input [(ngModel)]="search" type="text" required>
                 <button class="btn btn-primary" (click)="searchSong()">Buscar</button>
             </div>
         </div>
+        <br>
         <div class="row">
             <div *ngFor="let data of DataSearch" class="infoDiv col-lg-2 col-md-3 col-sm-6">
                 <div class="cover" [style.background-image]="sanitizeImage(data.albumId)">
                     <div class="overlayInfo">
+                        <img class="image" src="../../../content/images/heart-1.png" height="20px" width="20px"/>
                         <div>
                             <audio controls class="audio">
                                 <source src="{{data.previewURL}}" type="audio/mpeg">
@@ -54,5 +50,7 @@
                 </div>
             </div>
         </div>
+        <br>
+        <br>
     </div>
 </div>
