--- a/src/main/webapp/app/layouts/navbar/navbar.css
+++ b/src/main/webapp/app/layouts/navbar/navbar.css
@@ -1,25 +1,26 @@
 /* ==========================================================================
 Navbar
 ========================================================================== */
-.navbar-version {
-    font-size: 10px;
-    color: #ccc
+.navbar-title {
+    font-family: 'Dosis', sans-serif;
+    font-size: 25px;
+    color: #000000;
 }
 
 .jh-navbar {
-    background-color: #353d47;
+    background-color: #f5f5f5;
     padding: .2em 1em;
 }
 
 .jh-navbar .profile-image {
-    margin: -10px 0px;
+    margin: -10px 0;
     height: 40px;
     width: 40px;
     border-radius: 50%;
 }
 
 .jh-navbar .dropdown-item.active, .jh-navbar .dropdown-item.active:focus, .jh-navbar .dropdown-item.active:hover {
-    background-color: #353d47;
+    background-color: #d6d6d6;
 }
 
 .jh-navbar .dropdown-toggle::after {
@@ -35,11 +36,14 @@ Navbar
 }
 
 .jh-navbar a.nav-link {
-    font-weight: 400;
+    font-family: 'Dosis', sans-serif;
+    font-size: 18px;
+    font-weight: 200;
+    color: #000;
 }
 
 .jh-navbar .jh-navbar-toggler {
-    color: #ccc;
+    color: #d9d9d9;
     font-size: 1.5em;
     padding: 10px;
 }
@@ -81,7 +85,7 @@ Logo styles
 
 .logo-img {
     height: 100%;
-    background: url("../../../content/images/IMG_4858.png") no-repeat center center;
+    background: url("../../../content/images/logo.png") no-repeat center center;
     background-size: contain;
     width: 100%;
 }
