--- a/src/main/webapp/app/pages/pagehome/phome.css
+++ b/src/main/webapp/app/pages/pagehome/phome.css
@@ -22,6 +22,7 @@
 
 .tituloSong{
     color: white;
+    font-family: 'Dosis', sans-serif;
     font-size: 20px;
     position: relative;
     text-align: center;
@@ -44,7 +45,7 @@
     cursor: pointer;
     width: 65px;
     height: 65px;
-    margin-left: 25%;
+    margin-left: 35%;
     display: inline-block;
     margin-top: 25%;
 }
@@ -54,6 +55,22 @@
 }
 
 .image-top {
+    /*
     max-width: inherit!important;
     text-align: center;
+    */
+    /*display: flex;
+    flex-wrap: wrap;*/
+}
+
+
+@media
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (   min--moz-device-pixel-ratio: 2),
+only screen and (     -o-min-device-pixel-ratio: 2/1),
+only screen and (        min-device-pixel-ratio: 2),
+only screen and (                min-resolution: 192dpi),
+only screen and (                min-resolution: 2dppx) {
+    .hipster {
+    }
 }
