--- a/src/main/webapp/app/entities/collections/collections-dialog.component.html
+++ b/src/main/webapp/app/entities/collections/collections-dialog.component.html
@@ -4,10 +4,8 @@
         <h4 class="modal-title" id="myCollectionsLabel" jhiTranslate="rockbible3App.collections.home.createOrEditLabel">Create or edit a Collections</h4>
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
                 (click)="clear()">&times;</button>
-
-        <button type="button" class="glyphicon glyphicon-heart" data-dismiss="modal" aria-hidden="true"
-                (click)="like('idprueba')">like</button>
-
+<!--        <button type="button" class="glyphicon glyphicon-heart" data-dismiss="modal" aria-hidden="true"
+                (click)="like('idprueba')">like</button>-->
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
